fixed text alignment

--- a/lam/style/500_layout.css
+++ b/lam/style/500_layout.css
@@ -283,6 +283,11 @@ table.collapse {
 
 .rightToLeftText {
 	text-align: right;
+	text-align-last: right;
+}
+
+.rightToLeftText option {
+	direction: rtl;
 }
 
 .text-left {
